Add examples project to VS solution.

--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.props
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.props
@@ -12,7 +12,11 @@
 
   <ItemGroup Label="BuildOptionsExtension">
     <PropertyPageSchema Include="$(MSBuildThisFileDirectory)$(ProjectName).xml" />
-  </ItemGroup>  
+  </ItemGroup>
+
+  <PropertyGroup>
+    <Option-leveldb>true</Option-leveldb>
+  </PropertyGroup>
 
   <!-- Configuration -->
 
