Add sha512 w/hmac, rem C hash refs from script, rationalize ec wrapper, disable curl.

--- a/builds/msvc/vs2013/examples/libbitcoin_examples.vcxproj.filters
+++ b/builds/msvc/vs2013/examples/libbitcoin_examples.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\leveldb-single-file.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\snappy-single-file.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\crc32c.cpp" />
+    <ClCompile Include="..\..\..\..\examples\bigint.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
