--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
@@ -185,6 +185,15 @@
     <ClCompile Include="..\..\..\..\src\utility\hash.cpp">
       <Filter>src\utility</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\src\utility\external\bigint.c">
+      <Filter>src\utility\external</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\utility\external\hmac_sha512.c">
+      <Filter>src\utility\external</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\utility\external\sha512.c">
+      <Filter>src\utility\external</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\src\blockchain\leveldb\leveldb_organizer.hpp">
@@ -345,6 +354,18 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\bitcoin\utility\hash.hpp">
       <Filter>include\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\utility\external\bigint.h">
+      <Filter>include\utility\external</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\utility\bigint.hpp">
+      <Filter>include\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\utility\external\sha512.h">
+      <Filter>include\utility\external</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\utility\external\hmac_sha512.h">
+      <Filter>include\utility\external</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
