--- a/builds/msvc/vs2013/libbitcoin/packages.config
+++ b/builds/msvc/vs2013/libbitcoin/packages.config
@@ -1,11 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="curl" version="7.30.0.2" targetFramework="Native" />
-  <package id="curl.redist" version="7.30.0.2" targetFramework="Native" />
-  <package id="libssh2" version="1.4.3.3" targetFramework="Native" />
-  <package id="libssh2.redist" version="1.4.3.3" targetFramework="Native" />
   <package id="openssl" version="1.0.1.24" targetFramework="Native" />
   <package id="openssl.redist" version="1.0.1.24" targetFramework="Native" />
+  <package id="secp256k1_openssl_vc120" version="0.1.0.0" targetFramework="Native" />
   <package id="zlib" version="1.2.8.6" targetFramework="Native" />
   <package id="zlib.redist" version="1.2.8.6" targetFramework="Native" />
 </packages>
