--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.props
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.props
@@ -37,21 +37,21 @@
   
   <PropertyGroup Condition="$(Configuration.IndexOf('DLL')) != -1">
     <Linkage-curl>dynamic</Linkage-curl>
-    <Linkage-zlib>dynamic</Linkage-zlib>
-    <Linkage-openssl>dynamic</Linkage-openssl>
     <Linkage-libssh2>dynamic</Linkage-libssh2>
+    <Linkage-openssl>dynamic</Linkage-openssl>
+    <Linkage-zlib>dynamic</Linkage-zlib>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.IndexOf('LTCG')) != -1">
     <Linkage-curl>ltcg</Linkage-curl>
-    <Linkage-zlib>ltcg</Linkage-zlib>
-    <Linkage-openssl>ltcg</Linkage-openssl>
     <Linkage-libssh2>ltcg</Linkage-libssh2>
+    <Linkage-openssl>ltcg</Linkage-openssl>
+    <Linkage-zlib>ltcg</Linkage-zlib>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.IndexOf('LIB')) != -1">
     <Linkage-curl>static</Linkage-curl>
-    <Linkage-zlib>static</Linkage-zlib>
-    <Linkage-openssl>static</Linkage-openssl>
     <Linkage-libssh2>static</Linkage-libssh2>
+    <Linkage-openssl>static</Linkage-openssl>
+    <Linkage-zlib>static</Linkage-zlib>
   </PropertyGroup>
 
   <!-- Messages -->
@@ -62,10 +62,10 @@
   </Target>
 
   <Target Name="LinkageInfo" BeforeTargets="PrepareForBuild">
-    <Message Text="Linkage-curl      : $(Linkage-curl)" Importance="high"/>
-    <Message Text="Linkage-zlib      : $(Linkage-zlib)" Importance="high"/>
+    <!--<Message Text="Linkage-curl      : $(Linkage-curl)" Importance="high"/>-->
+    <!--<Message Text="Linkage-libssh2   : $(Linkage-libssh2)" Importance="high"/>-->
     <Message Text="Linkage-openssl   : $(Linkage-openssl)" Importance="high"/>
-    <Message Text="Linkage-libssh2   : $(Linkage-libssh2)" Importance="high"/>
+    <Message Text="Linkage-zlib      : $(Linkage-zlib)" Importance="high"/>
   </Target>
 
 </Project>
