--- a/builds/msvc/vs2013/test/packages.config
+++ b/builds/msvc/vs2013/test/packages.config
@@ -5,6 +5,7 @@
   <package id="boost_filesystem-vc120" version="1.55.0.16" targetFramework="Native" />
   <package id="boost_regex-vc120" version="1.55.0.16" targetFramework="Native" />
   <package id="boost_system-vc120" version="1.55.0.16" targetFramework="Native" />
+  <package id="boost_unit_test_framework-vc120" version="1.55.0.16" targetFramework="Native" />
   <package id="Crc32C" version="1.0.4" targetFramework="Native" />
   <package id="LevelDB" version="1.16.0.5" targetFramework="Native" />
   <package id="openssl" version="1.0.1.24" targetFramework="Native" />
