--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -56,6 +56,7 @@ bitcoin_util_include_HEADERS = \
 	utility/async_parallel.hpp \
 	utility/base58.hpp \
 	utility/big_number.hpp \
+	utility/checksum.hpp \
 	utility/elliptic_curve_key.hpp \
 	utility/hash.hpp \
 	utility/logger.hpp \
