Integrate the secp256k1 library

--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -57,6 +57,7 @@ bitcoin_util_include_HEADERS = \
 	utility/base58.hpp \
 	utility/big_number.hpp \
 	utility/checksum.hpp \
+	utility/ec_keys.hpp \
 	utility/elliptic_curve_key.hpp \
 	utility/hash.hpp \
 	utility/logger.hpp \
